--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Grilli - Restaurant</title>
   <meta name="title" content="Grilli - Restaurant">
-  <meta name="description" content="This is a Restaurant Website built by Usef Aly">
+  <meta name="author" content="Usef Aly">
+  <meta name="description" content="Responsive (Restaurant) Website template ">
   <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
