--- a/index.html
+++ b/index.html
@@ -1144,6 +1144,7 @@
 
         <p class="copyright">
        Crafted by <a
+       href="https://github.com/Usef-Aly"
        target="_blank" class="link">Usef Aly</a> 
       </p>
 
