--- a/index.html
+++ b/index.html
@@ -1143,7 +1143,7 @@
       <div class="footer-bottom">
 
         <p class="copyright">
-       Crafted by <a
+       Made by <a
        href="https://github.com/Usef-Aly"
        target="_blank" class="link">Usef Aly</a> 
       </p>
